# rusty-jam-3

client/: Cargo.toml
client/src/: main.rs
client/src/connect_menu/: mod.rs
client/src/in_game/: input.rs  mod.rs  physics.rs  sync.rs
client/src/in_game/events/: mod.rs  spawning.rs
server/: Cargo.toml
server/src/: main.rs  resources.rs  server_event_handling.rs
shared/: Cargo.toml
shared/src/: channels.rs  components.rs  lib.rs  messages.rs
shared/src/physics/: components.rs  mod.rs
