[package]
name = "server"
description = "The server for the Assassin game"
authors = ["Daniel Lyne <DLyne@pm.me>"]
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
bevy = "0.10"
bevy_rapier2d = { version = "0.21", features = ["enhanced-determinism"] }
clap = { version = "4", features = ["derive"] }
naia-bevy-server = { version = "0.21", features = ["transport_webrtc"] }
shared = { path = "../shared" }
